18-K8S/setupfiles/default-http-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend-service
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80  
  selector:
    app: default-http-backend
