18-K8S/setupfiles/letsencrypt.yml
apiVersion: v1
kind: Service
metadata:
  name: letsencrypt  
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80  
  selector:
    app: letsencrypt
